--- a/Flappy/Flappy.vcxproj.filters
+++ b/Flappy/Flappy.vcxproj.filters
@@ -42,4 +42,9 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="Assets\Art\Biplane.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
